--- a/templates/products/products-list.html
+++ b/templates/products/products-list.html
@@ -10,9 +10,12 @@
     <ul>
         {% for product in products %}
         <il>
+            <div>{{product.brand}}</div>
             <a href="{% url 'product_details' product.pk %}">
                 <h4>{{product.title}}</h4>
             </a>
+            <div>{{product.price}}</div>
+            <br><br>
         </il>
         {% empty %}
         <li>
