--- a/templates/products/product-details.html
+++ b/templates/products/product-details.html
@@ -11,6 +11,9 @@
     <p>{{product.description}}</p>
     <div>{{product.price}}</div>
     <br>
+    <a href="{% url 'product_edit' product.pk %}">Edit Product</a>
+    <a href="{% url 'product_delete' product.pk %}">Delete Product</a>
+    <br><br><br>
     <a href="{% url 'products_list' %}">
         Back to the products page
     </a>
