--- a/templates/products/product-delete.html
+++ b/templates/products/product-delete.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delete Product</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block head_title %}Delete Product{% endblock %}
+
+{% block content %}
+
     <h3>Delete: </h3>
     <h4>{{product.title}}</h4>
     <br>
@@ -15,5 +13,5 @@
         <input type="submit" value="Yes" /> 
 		<a href="/">Cancel </a>
     </form>
-</body>
-</html>
+
+{% endblock %}
