--- a/templates/products/product-edit.html
+++ b/templates/products/product-edit.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Product</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block head_title %}Edit Product{% endblock %}
+
+{% block content %}
+
     <form action="" method="POST">
         {% csrf_token %} {{ form.as_p }}
         <input type="submit" value="Edit"/>
     </form>
-</body>
-</html>
+
+{% endblock %}
