--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,14 @@
                 <a href="{% url 'home' %}">STORE</a>
             </h1>
 
+            {% if user.is_authenticated %}
+            <p>Welcome, {{ user.username }}. Thanks for logging in.</p>
+            <a href="{% url 'logout' %}">Log Out</a>
+            {% else %}
+            <p>Welcome, new user. Please log in.</p>
+            <a href="{% url 'login' %}">Login</a>
+            {% endif %}
+
             <div id="controls">
                 <div id="cart">
                 </div>
