--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,5 +1,5 @@
 <h1>Sign Up</h1>
 <form method="POST">
-    {% csrf_token %} {{ form.as_p }}
+    {% csrf_token %} {{ form.as_p }} {{ address_form.as_p }}
     <input type="submit" value="Signup"/>
 </form>
