--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,4 +4,4 @@
     <input type="submit" value="Login"/>
 </form>
 <a href="{% url 'signup' %}">Don't have an account?</a>
-<a href="{% url 'password_reset' %}">Reset password?</a>
+<a href="{% url 'password-reset' %}">Reset password?</a>
