--- a/templates/base.html
+++ b/templates/base.html
@@ -21,17 +21,24 @@
                 <a href="{% url 'home' %}">STORE</a>
             </h1>
 
-            {% if user.is_authenticated %}
-            <p>Welcome, {{ user.username }}. Thanks for logging in.</p>
-            <a href="{% url 'logout' %}">Log Out</a>
-            {% else %}
-            <p>Welcome, new user. Please log in.</p>
-            <a href="{% url 'login' %}">Login</a>
-            {% endif %}
-
             <div id="controls">
                 <div id="cart">
+                    <!--1-->
+                    <a href="{% url 'cart' %}"><i class="fas fa-shopping-cart"></i></a>
+
+                    {% if request.user.cart.items.all|length > 0 %}
+                    <span id="cart-counter">
+                        {{ request.user.cart.items.all|length }}
+                    </span>
+                    {% endif %}
                 </div>
+
+                {% if user.is_authenticated %}
+                <p>Hi, {{ user.username }}</p>
+                <input type="button" id="logout" onclick="location.href='{% url 'logout' %}'" value="Log out" />
+                {% else  %}
+                <input type="button" id="login" onclick="location.href='{% url 'login' %}'" value="Log in" />
+                {% endif %}
             </div>
         </header>
 
@@ -55,5 +62,4 @@
         crossorigin="anonymous"></script>
 </body>
 
-</html>y>
 </html>
