--- a/templates/carts/cart.html
+++ b/templates/carts/cart.html
@@ -1,20 +1,55 @@
-<ul>
+{% extends "base.html" %}
+{% block head_title %}All Products{% endblock %}
 
-    {% for product in products %}
+{% block content %}
+<section class="clearfix">
 
-    <li>
-        <h2>{{ product.title | capfirst }}</h2>
-        <a href="{% url 'remove_from_cart' product_id=product.id %}">Remove from cart</a>
-    </li>
+    <h2 class="section-headline">Cart</h2>
+    <p class="section-description">
+        Please check your products before checkout.
+    </p>
 
-    {% empty %}
-    <li>No products yet.</li>
+    <div class="cart">
+        <ul>
+            {% for product in cart.items.all %}
+            <li class="item">
+                <div class="cart-product-img">
+                    <img src="{{ product.image.url }}" alt="" />
+                </div>
+                <div>
+                    <h3>{{ product.title | capfirst }}</h3>
+                </div>
+                <div>
+                    <p>${{ product.price | floatformat:2 }}</p>
+                </div>
+                <div>
+                    <a href="{% url 'remove_from_cart' product_id=product.id %}" class="remove">x</a>
+                </div>
+            </li>
+            {% empty %}
+            <li>
+                <p>No products yet.</p>
+            </li>
+            {% endfor %}
 
-    {% endfor %}
-
-</ul>
-
-<p>Total Price: {{ total_price }}</p>
-
-<a href="{% url 'order' %}" class="checkout">Checkout</a>
-<a href="{% url 'clear_cart' %}">Clear Cart</a>
+            {% if cart.items.all.count > 0 %}
+            <li class="item" id="cart-summary">
+                <div>
+                    <p></p>
+                </div>
+                <div>
+                    <h3>Total</h3>
+                </div>
+                <div>
+                    <p>${{ cart.total_price }}</p>
+                </div>
+                <div>
+                    <a href="{% url 'order' %}" class="checkout">Checkout</a>
+                    <a href="{% url 'clear_cart' %}" class="clear">Clear Cart</a>
+                </div>
+            </li>
+            {% endif%}
+        </ul>
+    </div>
+</section>
+{% endblock %}
