--- a/templates/orders/order.html
+++ b/templates/orders/order.html
@@ -1,19 +1,18 @@
 {% extends "base.html" %}
-{% block head_title %}Sign Up{% endblock %}
+{% block head_title %}Order{% endblock %}
 
 {% block content %}
 <section class="form-section">
-    <h2 class="section-headline">Sign Up</h2>
+    <h2 class="section-headline">Make Order</h2>
     <p class="section-description">
-        Please fill in this form to create an account.
+        Please fill in your address to make an order.
     </p>
     <div class="form">
         <form action="" method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            {{ address_form.as_p }}
             <p>
-                <button type="submit">Signup</button>
+                <button type="submit">Order</button>
             </p>
         </form>
     </div>
