--- a/templates/registration/signup-success.html
+++ b/templates/registration/signup-success.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
-{% block head_title %}Reset Password{% endblock %}
+{% block head_title %}Sign Up{% endblock %}
 
 {% block content %}
 <section>
     <div>
-        <h1 class="section-headline">Email Sent!</h1>
+        <h1 class="section-headline">Thank You!</h1>
         <p class="section-description"><strong>Please check your email</strong> for further instructions on
-            how to complete your password reset.</p>
+            how to complete your account setup.</p>
         <a class="back" href="{% url 'home' %}">Continue to homepage</a>
     </div>
 </section>
