--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-
+ 
 {% load static %}
 
 <!DOCTYPE html>
@@ -21,18 +21,25 @@
             <h1 id="logo">
                 <a href="{% url 'home' %}">STORE</a>
             </h1>
-            <div style="float: right;"><a href="{% url 'order_list' %}">Orders</a></div>
-            {% if user.is_authenticated%}
-            <p>Hi, {{ user.username }}</p>
-            <a href="{% url 'logout' %}">Log Out</a>
-            {% else %}
-            <a href="{% url 'login' %}">Log in</a>
-            <a href="{% url 'signup' %}">Sign Up</a>
 
-            {% endif %}
             <div id="controls">
                 <div id="cart">
+                    <!--1-->
+                    <a href="{% url 'cart' %}"><i class="fas fa-shopping-cart"></i></a>
+
+                    {% if request.user.cart.items.all|length > 0 %}
+                    <span id="cart-counter">
+                        {{ request.user.cart.items.all|length }}
+                    </span>
+                    {% endif %}
                 </div>
+
+                {% if user.is_authenticated %}
+                <p>Hi, {{ user.username }}</p>
+                <input type="button" id="logout" onclick="location.href='{% url 'logout' %}'" value="Log out" />
+                {% else  %}
+                <input type="button" id="login" onclick="location.href='{% url 'login' %}'" value="Log in" />
+                {% endif %}
             </div>
         </header>
 
@@ -56,5 +63,4 @@
         crossorigin="anonymous"></script>
 </body>
 
-</html>y>
 </html>
