--- a/templates/base.html
+++ b/templates/base.html
@@ -44,18 +44,19 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a href="{% url 'home' %}">Home</a></li> 
-                                        <li><a href="shop.html">shop</a></li>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="blog.html">Blog</a>
+                                        <li><a href="{% url 'home' %}">shop</a></li>
+                                        <li><a href="{% url 'home' %}">About</a></li>
+                                        <li><a href="{% url 'home' %}">Blog</a>
                                             <ul class="submenu">
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="blog_details.html">Blog Details</a></li>
-                                                <li><a href="elements.html">Elements</a></li>
-                                                <li><a href="product-details.html">Product Details</a></li>
+                                                <li><a href=#>Blog</a></li>
+                                                <li><a href=#>Blog Details</a></li>
+                                                <li><a href=#>Elements</a></li>
+                                                <li><a href=#>Product Details</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="{% url 'home' %}">Contact</a></li>
                                     </ul>
+                                    
                                 </nav>
                             </div>   
                         </div>
@@ -180,7 +181,7 @@
                    <!-- social -->
                    <div class="footer-social">
                     <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/arij.trabelsi.100/"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-pinterest-p"></i></a>
                 </div>
             </div>
@@ -245,7 +246,7 @@
                <div class="col-xl-12 ">
                    <div class="footer-copy-right text-center">
                        <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                          Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://coretabs.net/" target="_blank">Coretabs</a>
+                          Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved  | Arij Trabelsi <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://coretabs.net/" target="_blank">Coretabs</a>
                           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                       </div>
                   </div>
