--- a/templates/products/products-list.html
+++ b/templates/products/products-list.html
@@ -12,7 +12,7 @@
                     <!-- Social -->
                     <div class="header-social  d-block d-md-none">
                         <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com/arij.trabelsi.100/"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-pinterest-p"></i></a>
                     </div>
                     <!-- Search Box -->
@@ -43,7 +43,7 @@
                                     <!-- Hero Caption -->
                                     <div class="hero__caption">
                                         <h1>fashion<br>changing<br>always</h1>
-                                        <a href="shop.html" class="btn">Shop Now</a>
+                                        <a href=# class="btn">Shop Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -57,7 +57,7 @@
                                     <!-- Hero Caption -->
                                     <div class="hero__caption">
                                         <h1>fashion<br>changing<br>always</h1>
-                                        <a href="shop.html" class="btn">Shop Now</a>
+                                        <a href=# class="btn">Shop Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -71,7 +71,7 @@
                                     <!-- Hero Caption -->
                                     <div class="hero__caption">
                                         <h1>fashion<br>changing<br>always</h1>
-                                        <a href="shop.html" class="btn">Shop Now</a>
+                                        <a href=# class="btn">Shop Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -93,7 +93,7 @@
                                     <span>Glasses</span>
                                 </div>
                                 <div class="favorit-items">
-                                 <a href="shop.html" class="btn">Shop Now</a>
+                                 <a href=# class="btn">Shop Now</a>
                              </div>
                          </div>
                      </div>
@@ -106,7 +106,7 @@
                                 <span>Watches</span>
                             </div>
                             <div class="favorit-items">
-                             <a href="shop.html" class="btn">Shop Now</a>
+                             <a href=# class="btn">Shop Now</a>
                          </div>
                      </div>
                  </div>
@@ -119,7 +119,7 @@
                             <span>Jackets</span>
                         </div>
                         <div class="favorit-items">
-                         <a href="shop.html" class="btn">Shop Now</a>
+                         <a href=# class="btn">Shop Now</a>
                      </div>
                  </div>
              </div>
@@ -132,7 +132,7 @@
                         <span>Clothes</span>
                     </div>
                     <div class="favorit-items">
-                     <a href="shop.html" class="btn">Shop Now</a>
+                     <a href=# class="btn">Shop Now</a>
                  </div>
              </div>
          </div>
@@ -186,7 +186,7 @@
 </div>
 <div class="row justify-content-center">
     <div class="room-btn">
-        <a href="catagori.html" class="border-btn">Browse More</a>
+        <a href=# class="border-btn">Browse More</a>
     </div>
 </div>
 <br><br>
@@ -199,7 +199,7 @@
         <div class="col-xl-7 col-lg-9">
             <div class="single-question text-center">
                 <h2 class="wow fadeInUp" data-wow-duration="2s" data-wow-delay=".1s">collection houses our first-ever</h2>
-                <a href="about.html" class="btn class="wow fadeInUp" data-wow-duration="2s" data-wow-delay=".4s">About Us</a>
+                <a href=# class="btn class="wow fadeInUp" data-wow-duration="2s" data-wow-delay=".4s">About Us</a>
             </div>
         </div>
     </div>
@@ -214,8 +214,8 @@
                         <img src="{%static 'images/popular-imtes1.png'%}" alt="">
                     </div>
                     <div class="location-details">
-                        <p><a href="product_details.html">Established fact that by the<br> readable content</a></p>
-                        <a href="product_details.html" class="btn">Read More</a>
+                        <p><a href=#>Established fact that by the<br> readable content</a></p>
+                        <a href=# class="btn">Read More</a>
                     </div>
                 </div>
             </div>
@@ -225,8 +225,8 @@
                         <img src="{%static 'images/popular-imtes2.png'%}" alt="">
                     </div>
                     <div class="location-details">
-                        <p><a href="product_details.html">Established fact that by the<br> readable content</a></p>
-                        <a href="product_details.html" class="btn">Read More</a>
+                        <p><a href=>Established fact that by the<br> readable content</a></p>
+                        <a href=# class="btn">Read More</a>
                     </div>
                 </div>
             </div>
