--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,23 +2,49 @@
 {% block head_title %}Login{% endblock %}
 
 {% block content %}
-<section class="form-section">
-    <h2 class="section-headline">Login</h2>
-    <p class="section-description">
-        Please fill in your credentials to login to your account.
-    </p>
-    <div class="form">
-        <form action="" method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <p>
-                <button type="submit">Login</button>
-            </p>
-        </form>
-        <p>
-            <a href="{% url 'signup' %}">Don't have an account?</a>
-            <a href="{% url 'password_reset' %}">Reset password?</a>
-        </p>
-    </div>
-</section>
+{% load static %}
+
+
+<div class="limiter">
+		<div class="container-login100">
+			<div class="wrap-login100">
+					<h2 class="section-headline">Login</h2>
+                
+				</div>
+                <br>
+                <p class="section-description">
+                Please fill in your credentials to login to your account.
+                </p>
+                <form action="" method="post" >
+                {% csrf_token %}
+                {{ form.as_p }}
+                
+                <div class="flex-sb-m w-full p-b-30">
+					<div class="contact100-form-checkbox">
+						<input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
+						<label class="label-checkbox100" for="ckb1">
+							Remember me
+						</label>
+					</div>
+                    <br>
+					<h4>
+						<a href="{% url 'password_reset' %}" class="txt1">
+							Forgot Password?
+						</a>
+                        <a href="{% url 'signup' %}" class="txt1">
+							Don't have an account?
+						</a>
+					</h4>
+				</div>
+                <br>
+                <div class="container-login100-form-btn">
+                    <button type="submit">Login</button>
+				</div>
+            </form>
+				
+			</div>
+		</div>
+	</div>
+
+
 {% endblock %}
